--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -134,6 +134,7 @@
     height: 680px;
     color: white;
     padding-top: 100px;
+    position: relative;
     h2{
         font-size: 36px;
         font-weight: 700;
@@ -174,45 +175,50 @@
 }
 
 .carousel__list{
-    background-color: red;
-    height: 740px;
+    width: 750px;
+    height: 720px;
+    margin: 0 auto;
     padding: 80px 0;
     position: relative;
-    .first-slade{
-        width: 750px;
-        height: 580px;
-        position: absolute;
-    }
+    box-sizing: none;
     .second-slide{
-        width: 750px;
-        height: 422px;
-        position: absolute;
-        top: 22%;
+        margin: 12.5% 0;
     }
-    .third-slide{
-        width: 750px;
-        height: 580px;
+    .button-left, .button-right{
+        border: none;
+        background-color: white;
         position: absolute;
+        img{
+            width: 31px;
+            height: 50px;
+        }
+    }
+    .button-left{
+        left: -60px;
+        top: 50%;
+    }
+    .button-right{
+        top: 50%;
+        right: -60px;
+        left: auto;
     }
 }
 
 .catalog{
     text-align: center;
     padding-top: 30px;
-    p{
+    h2{
         font-size: 30px;
         font-weight: 400;
         line-height: 45px;
         text-transform: uppercase;
+        margin-bottom: 45px;
     }
     &__list{
         display: flex;
         justify-content: center;
         li{
-            border: 2px solid #d0d0d0;
             margin: 0px 5px;
-            width: 200px;
-            transform: skew(-20deg);
             a{
                 display: inline-block;
                 text-decoration: none;
@@ -221,14 +227,18 @@
                 color: #6b6b6b;
                 line-height: 48px;
                 text-transform: uppercase;
-                transform: skew(20deg);
-            }
-        }
-        .active{
-            background-color: #C70101;
-            border: 0;
-            a{
-                color: white;
+                width: 200px;
+                transform: skew(-20deg);
+                border: 2px solid #d0d0d0;
+                &:focus{
+                    background-color: #C70101;
+                    border: 0;
+                    color: white;
+                    box-shadow: 2px 2px 10px red, -2px -2px 10px red;
+                }
+                div{
+                    transform: skew(20deg);
+                }
             }
         }
     }
@@ -240,6 +250,344 @@
             width: 300px;
             height: 440px;
             border: 2px solid #e8e8e8;
+            margin-top: 20px;
+            padding: 15px 20px 20px;
+            .product{
+                &__name{
+                    font-size: 16px;
+                    font-weight: 700;
+                    line-height: 25px;
+                    margin-top: 15px;
+                }
+                &__desc{
+                    font-size: 14px;
+                    font-weight: 300;
+                    line-height: 22px;
+                    margin-top: 15px;
+                }
+                &__more{
+                    display: inline-block;
+                    font-size: 14px;
+                    font-weight: 500;
+                    line-height: 14px;
+                    text-transform: uppercase;
+                    text-decoration: underline;
+                    color: #C70101;
+                    margin-top: 10px;
+                    margin-bottom: 17px;
+                    cursor: pointer;
+                }
+                &__back{
+                    display: none;
+                    ul{
+                        list-style-type: square;
+                        color: #C70101;
+                        margin: 0 10px;
+                        margin-bottom: 71px;
+                        li{
+                            text-align: left;
+                            margin-bottom: 5px;
+                            span{
+                                color: #555555;
+                                font-size: 14px;
+                                font-weight: 300;
+                                line-height: 21px;
+                                
+                            }
+                        }
+                    }
+                    .product__more{
+                        margin-bottom: 24px;
+                    }
+                }
+            }
+            .buy{
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                vertical-align: middle;
+                border-top: 1px solid #e8e8e8;
+                padding-top: 17px;
+                &__price {
+                    text-align: left;
+                    .old-price {
+                        font-size: 14px;
+                        font-weight: 300;
+                        line-height: 14px;
+                        color: #555555;
+                        text-decoration: line-through;
+                    }
+                    .new-price {
+                        font-size: 20px;
+                        font-weight: 700;
+                        line-height: 20px;
+                        color: #050505;
+                    }
+                }
+                &__btn {
+                    width: 135px;
+                    height: 44px;
+                    background-color: #C70101;
+                    border: 0;
+                    border-radius: 5px;
+                    font-size: 14px;
+                    font-weight: 500;
+                    line-height: 22px;
+                    color: white;
+                }
+            }
         }
     }
+}
+
+.reviews{
+    text-align: center;
+    width: 915px;
+    margin: 0 auto;
+    padding-top: 80px;
+    h2{
+        text-transform: uppercase;
+        font-size: 30px;
+        font-weight: 700;
+        line-height: 30px;
+        color: #0d0d0d;
+        margin-bottom: 60px;
+    }
+    &__people{
+        display: flex;
+        text-align: left;
+        margin-bottom: 60px;
+        .text{
+            margin-left: 60px;
+            .name{
+                font-size: 18px;
+                font-weight: 700;
+                line-height: 18px;
+                color: #0d0d0d;
+            }
+            .distance{
+                color: #646464;
+                font-size: 14px;
+                font-weight: 500;
+                line-height: 22px;
+                margin-bottom: 10px;
+            }
+            .comment{
+                font-size: 16px;
+                font-weight: 300;
+                line-height: 24px;
+                color: #0d0d0d;
+            }
+        }
+    }
+}
+footer{
+    position: relative;
+    iframe{
+        position: absolute;
+    }
+    .contact{
+        width: 460px;
+        height: 270px;
+        background-color: #C70101;
+        text-align: center;
+        left: 38%;
+        z-index: 3;
+        position: absolute;
+        &__address{
+            font-size: 20px;
+            font-weight: 500;
+            line-height: 20px;
+            color: white;
+            margin-top: 50px;
+        }
+        &__number{
+            margin-top: 35px;
+            font-size: 20px;
+            font-weight: 700;
+            line-height: 20px;
+            color: white;
+        }
+        &__social{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            .circle{
+                width: 53px;
+                height: 52px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border: 2px solid white;
+                border-radius: 27px;
+                margin: 36px 10px;
+                img{
+                    width: 25px;
+                    height: 25px;
+                }
+            }
+        }
+    }
+}
+
+.window{
+    display: none;
+    &__consultation{
+        display: none;
+    }
+    &__consultation-active{
+        display: inline-block;
+        width: 380px;
+        height: 400px;
+        background-color: #f2f2f2;
+        padding: 35px 25px 40px;
+        text-align: center;
+        position: fixed;
+        z-index: 4;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        div{
+            font-size: 19px;
+            font-weight: 700;
+            line-height: 19px;
+            color: #0d0d0d;
+            margin-bottom: 25px;
+            span{
+                font-size: 14px;
+                font-weight: 700;
+                line-height: 14px;
+            }
+        }
+        input{
+            width: 300px;
+            height: 50px;
+            border-radius: 5px;
+            border: 0;
+            position: relative;
+            margin-bottom: 11px;
+            &::placeholder{
+                position: absolute;
+                left: 21px;
+            }
+        }
+        .consult-btn{
+            width: 300px;
+            height: 60px;
+            margin-top: 5px;
+            background-color: #C70101;
+            border-radius: 5px;
+            border: 0;
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 25px;
+            color: white;
+            text-transform: uppercase;
+        }
+        .exit{
+            position: absolute;
+            top: 0px;
+            left: 400px;
+        }
+    }
+    &__final{
+        display: none;
+    }
+    &__final-active{
+        display: inline-block;
+        width: 380px;
+        height: 140px;
+        background-color: #f2f2f2;
+        padding: 35px 70px;
+        text-align: center;
+        position: fixed;
+        z-index: 4;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        div{
+            font-size: 19px;
+            font-weight: 700;
+            line-height: 19px;
+            color: #0d0d0d;
+            span{
+                display: inline-block;
+                font-size: 14px;
+                font-weight: 700;
+                line-height: 14px;
+                margin-top: 10px;
+            }
+        }
+        .exit{
+            position: absolute;
+            top: 0px;
+            left: 400px;
+        }
+    }
+    &__purchase{
+        display: none;
+    }
+    &__purchase-active{
+        display: inline-block;
+        width: 380px;
+        height: 400px;
+        background-color: #f2f2f2;
+        padding: 35px 25px 40px;
+        text-align: center;
+        position: fixed;
+        z-index: 4;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        div{
+            font-size: 19px;
+            font-weight: 700;
+            line-height: 19px;
+            color: #0d0d0d;
+            margin-bottom: 25px;
+            span{
+                font-size: 14px;
+                font-weight: 700;
+                line-height: 14px;
+            }
+        }
+        input{
+            width: 300px;
+            height: 50px;
+            border-radius: 5px;
+            border: 0;
+            position: relative;
+            margin-bottom: 11px;
+            &::placeholder{
+                position: absolute;
+                left: 21px;
+            }
+        }
+        .consult-btn{
+            width: 300px;
+            height: 60px;
+            margin-top: 5px;
+            background-color: #C70101;
+            border-radius: 5px;
+            border: 0;
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 25px;
+            color: white;
+            text-transform: uppercase;
+        }
+        .exit{
+            position: absolute;
+            top: 0px;
+            left: 400px;
+        }
+    }
+}
+.window-active{
+    display: inline-block;
+    background-color: rgba(5, 5, 5, 0.4);
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 4;
 }
