--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -160,7 +160,7 @@
             left: 21px;
         }
     }
-    .consult-btn{
+    .main__consult-btn{
         width: 300px;
         height: 50px;
         background-color: #C70101;
@@ -219,38 +219,49 @@
         justify-content: center;
         li{
             margin: 0px 5px;
-            a{
+            div{
                 display: inline-block;
-                text-decoration: none;
+                width: 200px;
                 font-size: 18px;
                 font-weight: 400;
                 color: #6b6b6b;
                 line-height: 48px;
                 text-transform: uppercase;
-                width: 200px;
                 transform: skew(-20deg);
                 border: 2px solid #d0d0d0;
+                cursor: pointer;
+                &:hover{
+                    background-color: #C70101;
+                    border: 0;
+                    color: white;
+                }
                 &:focus{
                     background-color: #C70101;
                     border: 0;
                     color: white;
                     box-shadow: 2px 2px 10px red, -2px -2px 10px red;
                 }
-                div{
+                span{
+                    display: inline-block;
                     transform: skew(20deg);
                 }
             }
         }
     }
     &__shop{
-        flex-wrap: wrap;
-        width: 945px;
+        width: 955px;
         margin: 0 auto;
+        text-align: left;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
         &-info{
+            display: inline-block;
+            text-align: center;
             width: 300px;
+            margin: 20px 7.5px 0;
             height: 440px;
             border: 2px solid #e8e8e8;
-            margin-top: 20px;
             padding: 15px 20px 20px;
             .product{
                 &__name{
@@ -391,9 +402,13 @@ footer{
         height: 270px;
         background-color: #C70101;
         text-align: center;
-        left: 38%;
+        left: 50%;
+        transform: translateX(-50%);
         z-index: 3;
         position: absolute;
+        &__repres{
+            display: none;
+        }
         &__address{
             font-size: 20px;
             font-weight: 500;
@@ -487,7 +502,8 @@ footer{
         .exit{
             position: absolute;
             top: 0px;
-            left: 400px;
+            left: auto;
+            right: -40px;
         }
     }
     &__final{
