--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -607,3 +607,16 @@ footer{
     height: 100%;
     z-index: 4;
 }
+
+.scroll{
+    display: none;
+    position: fixed;
+    top: auto;
+    bottom: 30px;
+    left: auto;
+    right: 30px;
+    img{
+        width: 70px;
+        height: 70px;
+    }
+}
