--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -108,6 +108,9 @@
         &:nth-child(2){
             margin: 0 65px;
         }
+        &__animated{
+            animation: heart 2s linear infinite;
+        }
         h3{
             font-size: 18px;
             font-weight: 700;
@@ -251,10 +254,8 @@
     &__shop{
         width: 955px;
         margin: 0 auto;
-        text-align: left;
         display: flex;
         flex-wrap: wrap;
-        justify-content: center;
         &-info{
             display: inline-block;
             text-align: center;
@@ -619,4 +620,10 @@ footer{
         width: 70px;
         height: 70px;
     }
+}
+
+@keyframes heart{
+    from{transform: scale(1);}
+    50%{transform: scale(1.3);}
+    to{transform: scale(1);}
 }
